tests/baselines/reference/missingPropertiesOfClassExpression.errors.txt
missingPropertiesOfClassExpression.ts(1,52): error TS2339: Property 'y' does not exist on type '(Anonymous class)'.


==== missingPropertiesOfClassExpression.ts (1 errors) ====
    class George extends class { reset() { return this.y; } } {
                                                       ~
!!! error TS2339: Property 'y' does not exist on type '(Anonymous class)'.
        constructor() {
            super();
        }
    }
    